# smboost

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  check.py  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: conditions.py  export_results.py  run_all.py  run_humaneval.py  tasks.py
benchmarks/bfcl/: loader.py  runner.py
benchmarks/gates/: criteria.py  report.py  runner.py
benchmarks/gsm8k/: __init__.py  loader.py  prompt.py  runner.py  scorer.py
benchmarks/humaneval_plus/: evalplus_eval.py  runner.py  simple_eval.py
benchmarks/livecodebench/: __init__.py  __main__.py  conditions.py  frontier.py  frontier_parity.py  frontier_pricing.py  frontier_runner.py  loader.py  matrix.py  runner.py  sandbox.py
docs/: writeup.md
docs/superpowers/specs/: 2026-04-16-harness-state-machine-design.md
examples/: single_task.py
frontend/: bench.jsx
scripts/: _2026_04_27_a2_phi3_launcher.sh  _2026_04_27_aggregate_pass.py  c1_probe.py  canary_day8.py  demo_driver.py  demo_serve.sh  finalize_matrix.sh  functional_probe.py  overnight_full_matrix.py  process_lcb.py  run_full_matrix_v2.py  run_gates.py  run_gates_0_8b.py  smoke_pipeline.py
scripts/_archive/: fill_yc_brief.py
src/smboost/: __init__.py  agent.py  scorer.py
src/smboost/harness/: conditions.py  graph.py  real_tool_graph.py  result.py  self_consistency_graph.py  state.py  trace_schema.py
src/smboost/invariants/: suite.py
src/smboost/llm/: __init__.py  grammar.py  local.py  runtime.py
src/smboost/memory/: session.py
src/smboost/tasks/: _tool_loop.py  base.py  coding.py  completion.py  emit_only_tool_calling.py  stdin_skeletons.py  tool_calling.py
src/smboost/tools/: __init__.py  memory.py  python_sandbox.py
tests/integration/: test_agent_e2e.py  test_livecodebench_smoke.py
tests/unit/: test_agent.py  test_agent_flags.py  test_benchmark_smoke.py  test_coding_task.py  test_completion_task.py  test_emit_only_tool_calling.py  test_export_results.py  test_grounded_verify.py  test_harness_graph.py  test_harness_result.py  test_invariants.py  test_local_llama.py  test_overnight_full_matrix.py  test_sandbox.py  test_scorer.py  test_session_memory.py  test_session_memory_integration.py  test_state.py  test_task_base.py  test_tool_calling_task.py  test_trace_emission.py  test_trace_schema.py
tests/unit/benchmarks/: test_bfcl_loader.py  test_bfcl_runner.py  test_conditions.py  test_evalplus_eval.py  test_gate_criteria.py  test_gate_report.py  test_gate_runner.py  test_humaneval_plus_runner.py  test_simple_eval.py
tests/unit/gsm8k/: test_loader.py  test_runner.py  test_scorer.py
tests/unit/harness/: test_real_tool_graph.py  test_self_consistency.py
tests/unit/livecodebench/: test_conditions.py  test_frontier.py  test_frontier_runner.py  test_matrix.py  test_runner.py
tests/unit/llm/: test_grammar.py
tests/unit/tools/: test_memory.py  test_python_sandbox.py
