[project]
name = "smboost"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "langgraph>=1.0",
    "langchain-ollama>=1.0",
    "langchain-core>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.14",
]
benchmark = [
    "human-eval>=1.0",
]
bench = [
    "evalplus>=0.3.0",
    "requests>=2.31.0",
    "human-eval>=1.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/smboost"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: requires running Ollama with qwen3.5:2b pulled",
    "slow: tests that call into evalplus (≥10s wall clock); deselected by default",
]
addopts = "-m 'not integration and not slow'"
pythonpath = ["."]
