[project]
name = "smboost"
version = "0.1.0"
description = "LangGraph decoding-time harness that lifts small open-weight models on verifier-friendly benchmarks (math, code with tests) via parallel self-consistency, per-sample program verifiers, and raw-anchored majority voting."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
keywords = ["llm", "small-language-model", "self-consistency", "langgraph", "evaluation", "benchmark", "qwen", "decoding"]
authors = [{name = "Haiyang Wu"}]
# Upper bounds: LangChain 1.x minors have been breaking (e.g. chat-model param
# renames).  We also subclass private LangChain API in src/smboost/llm/runtime.py
# (_CompatibleChatOpenAI overrides _default_params / _get_request_payload), so a
# langchain-openai 2.0 bump would almost certainly break us.  Re-pin only after
# smoke-testing against the new minor.
dependencies = [
    "langgraph>=1.0,<2.0",
    "langchain-core>=1.0,<2.0",
    # pinned <2.0 because llm/runtime.py patches private LangChain API
    "langchain-openai>=1.0,<2.0",
    # evalplus uses urllib to download HumanEvalPlus.jsonl.gz; py3.13 mac has
    # no default cert bundle, so scripts/run_gates.py sets SSL_CERT_FILE via certifi.
    "certifi>=2024.0",
]

[project.urls]
Repository = "https://github.com/haiyang5535/smboost"
Issues = "https://github.com/haiyang5535/smboost/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.14",
]
# Local llama.cpp backend (SMBOOST_LLM_BACKEND=local).  Optional because the
# default backend hits an OpenAI-compatible server and most reviewers will use
# that path.
local = [
    "llama-cpp-python>=0.3",
]
benchmark = [
    "human-eval>=1.0",
]
bench = [
    "evalplus>=0.3.0,<1.0",
    "requests>=2.31.0,<3.0",
    "human-eval>=1.0.3",
    # GSM8K bench loader fetches openai/gsm8k via HuggingFace Datasets.
    "datasets>=2.14",
]
# External-API baselines (benchmarks/external/): Claude Sonnet 4.6 / GPT-4o /
# Llama-3-70B via OpenRouter.  `openai` is already used elsewhere (OpenAI-compat
# llama.cpp path); we add `anthropic` for the Claude client.  Kept optional so
# the main install doesn't pull a second LLM SDK.
external = [
    "anthropic>=0.40,<1.0",
    "openai>=1.30,<3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/smboost"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: requires running Ollama with qwen3.5:2b pulled",
    "slow: tests that call into evalplus (≥10s wall clock); deselected by default",
]
addopts = "-m 'not integration and not slow'"
pythonpath = ["."]
